--- a/ProyectoEncuestas/encuestas/templates/encuestas/resultados.html
+++ b/ProyectoEncuestas/encuestas/templates/encuestas/resultados.html
@@ -1,7 +1,29 @@
-<h1>{{pregunta.pregunta}}</h1>
-<ul>
-	{% for opcion in pregunta.opcion_set.all %}
-	<li>{{opcion.opcion}} -- {{opcion.votos}} voto{{opcion.votos|pluralize}}</li>
-	{% endfor %}
-</ul>
-<a href="{% url 'encuestas:detalle' pregunta.id %}">Votar de nuevo?</a>
+
+	{% extends 'encuestas/base.html' %}
+
+	{% block title %}Resultado{% endblock %}
+
+	{% block content %}
+
+	<div class="container-fluid">
+
+    <h3>{{pregunta.pregunta}}</h3>
+    <div class="contenido" style="display: flex;justify-content: center;">
+    	<ul style="text-align: left;">
+		{% for opcion in pregunta.opcion_set.all %}
+			<li>{{opcion.opcion}} -- {{opcion.votos}} voto{{opcion.votos|pluralize}}</li>
+		{% endfor %}
+		</ul>
+	</div>
+	<a href="{% url 'encuestas:detalle' pregunta.id %}">Votar de nuevo?</a>
+
+    </div>
+
+	{% endblock %}
+
+
+
+
+
+
+
